--- a/PluginTest/PluginTest.csproj
+++ b/PluginTest/PluginTest.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <Version>0.0.0</Version>
     <NeutralLanguage></NeutralLanguage>
@@ -12,10 +12,12 @@
     <AssemblyName>AgGateway.ADAPT.PluginTest</AssemblyName>
     <RootNamespace>AgGateway.ADAPT.PluginTest</RootNamespace>
     <PackageId>AgGateway.ADAPT.PluginTest</PackageId>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AgGatewayADAPTFramework" Version="1.2.0-beta1" />
+    <PackageReference Include="AgGatewayADAPTFramework" Version="1.2.0-beta2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
     <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="NUnit" Version="3.9.0" />
