--- a/TestUtilities/TestUtilities.csproj
+++ b/TestUtilities/TestUtilities.csproj
@@ -11,10 +11,13 @@
     <AssemblyName>AgGateway.ADAPT.TestUtilities</AssemblyName>
     <RootNamespace>AgGateway.ADAPT.TestUtilities</RootNamespace>
     <PackageId>AgGateway.ADAPT.TestUtilities</PackageId>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AgGatewayADAPTFramework" Version="1.2.0-beta1" />
+    <PackageReference Include="AgGatewayADAPTFramework" Version="1.2.0-beta2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
     <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
